--- a/memory.css
+++ b/memory.css
@@ -14,6 +14,10 @@ img:hover {
     border: 1px solid #b30000;
     cursor: pointer;
 }
+.front {
+    position: absolute;
+    opacity: 60;
+}
 
 h1 {
     text-align: center;
@@ -73,12 +77,25 @@ h1 {
 #unten {
     display: inline-block;
 }
-#eins:hover{
+
+#einfach:hover{
     cursor: pointer;
+    color: cyan;
 }
-#zwei:hover{
+#normal:hover{
     cursor: pointer;
+    color: cyan;
 }
-#drei:hover{
+#schwer:hover{
     cursor: pointer;
+    color: cyan;
+}
+
+#new-game:hover {
+    cursor: pointer;
+    color: white;
+}
+
+a {
+    color: blanchedalmond;
 }
