--- a/memory.css
+++ b/memory.css
@@ -42,6 +42,12 @@ h1 {
     left: 85%;
     top: 110px;
 }
+#h21:hover {
+    cursor: pointer;
+}
+#h23:hover {
+    cursor: pointer;
+}
 #game-area {
     width: 100%;
     height: 700px;
