--- a/memory.css
+++ b/memory.css
@@ -128,6 +128,7 @@ h1 {
 #com {
     margin-left: 890px;
     font-size: large;
+    text-decoration: underline;
 }
 #c-number {
     margin-left: 965px;
@@ -157,9 +158,9 @@ h1 {
     background: rgba(0, 255, 255, 0);
 }
 footer {
-    margin-top: 20px;
+    margin-top: 40px;
     padding-bottom: 15px;
-    border-top: 4px solid rgb(230, 230, 230);
+    border-top: 3px solid rgb(230, 230, 230);
 }
 #footer {
     text-align: center;
